test/scc_test/decl/semantic-errors/007.t
void test(int a, int b, int c, int a)
{
}